flicker fix

--- a/src/style.scss
+++ b/src/style.scss
@@ -20,6 +20,10 @@ body {
   }
 }
 
+a:visited {
+  color: $light-blue;
+}
+
 a {
   font: {
     family: $body-font;
